增加wire和grpc
